# profession_ai_data_engineering_progetto1

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.it.md  README.md  programmazione-con-python-progetto1.ipynb  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.rst  conf.py  index.rst  traccia-progetto.md
proto/: _notebook_readable.py  programmazione-con-python-progetto1.ipynb
src/gestore_spese/: __init__.py
src/gestore_spese/application/: __init__.py
src/gestore_spese/application/dtos/: __init__.py  abstract_report_mensile_dto.py  report_mensile_dto.py
src/gestore_spese/application/ports/: __init__.py  abstract_reporting_provider.py
src/gestore_spese/application/reporting/: __init__.py  in_memory_reporting_provider.py
src/gestore_spese/application/use_cases/: __init__.py  abstract_use_case.py  aggiungi_spesa_use_case.py  report_mensile_use_case.py  top_10_spese_use_case.py
src/gestore_spese/domain/: __init__.py
src/gestore_spese/domain/entities/: __init__.py  abstract_spesa.py  spesa.py
src/gestore_spese/domain/repositories/: __init__.py  abstract_spesa_repository.py
src/gestore_spese/domain/services/: __init__.py  abstract_spesa_service.py  spesa_service.py
src/gestore_spese/infrastructure/: __init__.py
src/gestore_spese/infrastructure/persistence/: __init__.py
src/gestore_spese/infrastructure/persistence/datasources/: __init__.py  abstract_spesa_datasource.py  spesa_datasource_csv.py
src/gestore_spese/infrastructure/persistence/repositories/: __init__.py  spesa_repository.py
src/gestore_spese/infrastructure/reporting/: __init__.py  duckdb_reporting_provider.py  reporting_provider_factory.py
src/gestore_spese/interfaces/: __init__.py
src/gestore_spese/interfaces/cli/: __init__.py  main.py
src/gestore_spese/interfaces/cli/commands/: __init__.py  abstract_command.py  aggiungi_spesa_command.py  report_mensile_command.py  top_10_spese_command.py
tests/: test_smoke.py
tests/application/dtos/: test_report_mensile_dto.py
tests/application/reporting/: test_in_memory_reporting_provider.py
tests/application/use_cases/: test_aggiungi_spesa_use_case.py  test_report_mensile_use_case.py  test_top_10_spese_use_case.py
tests/domain/entities/: test_spesa.py
tests/domain/services/: test_spesa_service.py
tests/infrastructure/persistence/datasources/: test_spesa_datasource_csv.py
tests/infrastructure/persistence/repositories/: test_spesa_repository.py
tests/infrastructure/reporting/: test_duckdb_reporting_provider.py  test_reporting_provider_factory.py
tests/interfaces/cli/commands/: test_aggiungi_spesa_command.py  test_report_mensile_command.py  test_top_10_spese_command.py
