[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gestore-spese"
version = "0.1.0"
description = "Gestore delle spese domestiche: applicazione CLI per il tracciamento delle spese personali, costruita con Clean Architecture e DDD."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Federico Vita", email = "federico.vita1997@gmail.com" }]
keywords = ["cli", "finance", "expenses", "ddd", "clean-architecture", "solid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = []

[project.scripts]
gestore-spese = "gestore_spese.interfaces.cli.main:main"

[project.urls]
Repository = "https://github.com/profession-ai-data-engineering-master/profession_ai_data_engineering_progetto1"

[tool.hatch.build.targets.wheel]
packages = ["src/gestore_spese"]
