[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gestore-spese"
version = "0.1.0"
description = "Gestore delle spese domestiche: applicazione CLI per il tracciamento delle spese personali, costruita con Clean Architecture e DDD."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Federico Vita", email = "federico.vita1997@gmail.com" }]
keywords = ["cli", "finance", "expenses", "ddd", "clean-architecture", "solid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "sphinx>=7.0",
    "furo>=2024.1.29",
]

[project.scripts]
gestore-spese = "gestore_spese.interfaces.cli.main:main"

[project.urls]
Repository = "https://github.com/profession-ai-data-engineering-master/profession_ai_data_engineering_progetto1"

[tool.hatch.build.targets.wheel]
packages = ["src/gestore_spese"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
# Il notebook prototipale e il suo export auto-generato non seguono lo
# stile di produzione: vengono esclusi dal lint/format.
extend-exclude = ["proto"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, SIM simplify
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=gestore_spese --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
source = ["gestore_spese"]
branch = true
# Entry point interattivo + composition root: avviato da __main__, non
# adatto allo unit test (orchestrazione/IO). Escluso dalla misura.
omit = ["*/interfaces/cli/main.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

